manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: deletetodo
spec:
  relicas: 2
  selector: 
    matchLabels: 
      app: deletetodo
  
  template: 
    metadata: 
      labels: 
        app: deletetodo
    containers: 
    - name: deletetodo
      image: anjaliacr.azurecr.io/deletetodo:v1 
      ports: 
      - containerPort: 8000
