manifest/service.yml
apiVersion: v1 
kind: Service 
metadata:
    name: deletetodo 
spec:
  type: ClusterIP 
  selector:
    app: deletetodo
  ports: 
  - port: 80
    targetPort: 8000
